--- a/UI/UI_Main.form
+++ b/UI/UI_Main.form
@@ -5,7 +5,7 @@
     <Property name="defaultCloseOperation" type="int" value="3"/>
     <Property name="title" type="java.lang.String" value="Qu&#x1ea3;n L&#xfd; Trung T&#xe2;m Anh Ng&#x1eef;"/>
     <Property name="size" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-      <Dimension value="[1200, 700]"/>
+      <Dimension value="[1200, 720]"/>
     </Property>
   </Properties>
   <SyntheticProperties>
@@ -61,8 +61,8 @@
                   <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
                   <Component id="btnTaiKhoan" max="32767" attributes="0"/>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
-                  <Component id="txtThongTinDangNhap" max="32767" attributes="0"/>
-                  <EmptySpace min="-2" pref="48" max="-2" attributes="0"/>
+                  <Component id="txtThongTinDangNhap" min="-2" pref="200" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
                   <Component id="btnDangXuat" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
@@ -96,7 +96,7 @@
         <Component class="javax.swing.JButton" name="btnDangXuat">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="f5" green="f5" red="ef" type="rgb"/>
+              <Color blue="ff" green="f5" red="e6" type="rgb"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
               <Image iconType="3" name="/images/dangxuat.png"/>
@@ -230,7 +230,7 @@
               <Font name="Tahoma" size="12" style="0"/>
             </Property>
             <Property name="horizontalAlignment" type="int" value="0"/>
-            <Property name="text" type="java.lang.String" value="&lt;T&#xea;n Nh&#xe2;n Vi&#xea;n&gt;-&lt;M&#xe3; NV&gt;"/>
+            <Property name="text" type="java.lang.String" value="&lt;M&#xe3;&gt;|&lt;T&#xea;n Nh&#xe2;n Vi&#xea;n&gt;"/>
             <Property name="toolTipText" type="java.lang.String" value="Th&#xf4;ng Tin Ng&#x1b0;&#x1edd;i D&#xf9;ng"/>
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
               <Border info="null"/>
